@@ -34,6 +34,8 @@ Backported:
       "routing-protocol-redirect" and "routing-protocols", that allow
       redirection of routing protocol traffic received by a router port
       to a different logical switch port.
+    - The experimental logical router port options "routing-protocol-redirect"
+      and "routing-protocols" are now also usable on distributed gateway ports.
 
 OVN v24.03.0 - 01 Mar 2024
 --------------------------
